overflow of eleemnt fixed and style update

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,12 @@
   }
 }
 
+a,
+input,
+button {
+  @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-neutral-400 focus-visible:ring-offset-2 focus-visible:ring-offset-neutral-50;
+}
+
 .swiper-pagination-bullets {
   background: rgba(255, 255, 255, 0.7);
   width: auto !important;
